--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
     />
     <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Juan Lemos Computer engineer.  Solutions. entrepreneur business. Ingeniero en informática."
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
