update metadata description

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Juan Lemos Computer engineer.  Solutions. entrepreneur business. Ingeniero en informática."
+      content="Juan Lemos Computer engineer. Solutions. Entrepreneur. Business. Passionate about understanding and resolving
+      problems, like to suggesting new approaches. Believe in the
+      importance of teamwork. Committed. Quick learner."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
