--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Juan Lemos Computer engineer. Solutions. Entrepreneur. Business. Passionate about understanding and solving
+      content="Juan Lemos Software engineer. Solutions. Entrepreneur. Business. Passionate about understanding and solving
       problems, to improve new business and
       existence one. Teamworker. Committed. Quick learner."
     />
