new header and description

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
       name="description"
       content="Juan Lemos Software engineer. Solutions. Entrepreneur. Business. Passionate about understanding and solving
       problems, to improve new business and
-      existence one. Teamworker. Committed. Quick learner."
+      existence one. Teamworker. Committed. Quick learner.
+      Github:https://github.com/juanpaleExternal
+      Medium: medium.com/@juanlemos"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -32,7 +34,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Juan Lemos - Software Engineer - Question maker</title>
+    <title>
+      Juan Lemos - Software engineer. Business focused. Question maker.
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
